stripped everything else out, still trying to fix on mobile

--- a/public/style0.css
+++ b/public/style0.css
@@ -1,3 +1,91 @@
+/* Core */
+
+body {
+  margin: 0;
+  margin-top: -35px;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #333;
+  font-size: 1.1em;
+  line-height: 1.5;
+  text-align: center;
+}
+
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+h1, h2, h3 {
+  margin: 1em;
+  padding: 1em, 0;
+}
+
+p {
+  margin: 0;
+  padding: 1em, 0;
+}
+
+/* Showcase */
+#showcase {
+  min-height: 450px;
+  color: white;
+  text-align: center;
+}
+@media(min-width: 700px) {
+  body {
+    /* display: none; */
+  }
+}
+
+
+
+#showcase .bg-image {
+  position: absolute;
+  background: #333 url('https://images.pexels.com/photos/236636/pexels-photo-236636.jpeg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 450px;
+  z-index: -1;
+  opacity: 0.4;
+}
+
+#showcase h1 {
+  padding-top: 50px;
+  padding-bottom: 0;
+}
+
+#showcase .content-wrap
+#section-a .content-wrap {
+  padding: 1em 1.5em;
+}
+
+/* Section A */
+
+#section-a {
+  background: #eaeaea;
+  color: #333;
+  padding-bottom: 2em;
+  padding-top: 1em;
+}
+
+/* Section B */
+#section-b {
+  padding: 2em 1em 1em;
+}
+
+
+/* Footer */
+#main-footer {
+  padding: 2em;
+  background: black;
+  color: white;
+  text-align: center;
+}
+
+
 
 
 .board {
